--- a/Recenzija/03_Fsharp.tex
+++ b/Recenzija/03_Fsharp.tex
@@ -34,13 +34,14 @@ F\# je funkcionalni jezik nastao na .NET platformi što mu pruža kompatibilnost
 % Напишете своја запажања и конструктивне идеје шта у раду недостаје и шта би требало да се промени-измени-дода-одузме да би рад био квалитетнији.
 \begin{itemize}
     \item U poglavlju 7 nije jasno podvučena crta izmedju .NET-a kao platforme, okvira, kao i ostalih navedenih web okvira. Ukoliko se ne varam radni okviri nisu isto što i platforma? Ako sam dobro razumeo F\# se pokreće na .NET platformi u svakom slučaju (iako koristimo druge okvire poput Suave, Fable itd...)?
+      \\  \odgovor {Primedba je prihvaćena. U poglavlju je pomenuto ispravljeno i trebalo bi da je sada jasnije na šta se mislilo.}
     \item U sadržaju fale podsekcije. \\ \odgovor{Sadržaj je skraćen zbog prostora na prvoj strani. Na predavanju je naglašeno da to sme da se koristi.}
     \item Razmisliti o preimenovanju poglavlja 5 tako da se iz naslova vidi da je akcenat da poklapanju obrazaca. \\ 
     \odgovor {Sugestija je prihvaćena. Naslov je promenjen u "Funckionalno programinranje - Pattern matching".}
     \item Postoje pasusi koji imaju samo jednu rečenicu kao i mešanje vremena i aktiva/pasiva. 
     \\ \odgovor{Pasusi sa jednom rečenicom su prepravljeni. Problem sa aktivom i pasivom nije konkretno naveden gde se javlja. Biće ispravljen kod sugestije drugog recenzenta.}
     \item U poglavlju 3 bi možda mogla biti dodata neka referenca koja bi prikazala da se jezik stvarno primenjuje u navedenim oblastima (ili makar nekoj od njih).
-   % \\ \odgovor{TRESNJA - dodati reference za primenu}
+   \\ \odgovor{Primedba se prihvata. Ovaj podatak pronađen je na slajdovima sa predavanja iz kursa programske paradigme. Biće dodat link ka tim slajdovima.}
     \item U poglavlju 4, Bezbednost - da li .NET platforma temeljno proverava programe? '...if/elif/else u svakoj grani imaju povratnu vrednost' da li to znači da ta struktura kao izraz ima povratnu vrednost?
     \\ \odgovor{Primedba prihvaćena. Rečenica je preformulisana da bi bilo jasnije kako se vrši provera ispravnosti programa. Kako sve ovo funkcioniše, spada u viši nivo poznavanja verifikacije softvera u šta autor nije detaljno zalazio.
     Struktura if/elif/else kao izraz uvek ima povratnu vrednost. U sledećoj stavci je objašnjeno kako povratna vrednost funkcioniše i bez ključne reči return. }
@@ -353,7 +354,7 @@ uveden u njegovu sintaksu.
 % Напишете своја запажања и конструктивне идеје шта у раду недостаје и шта би требало да се промени-измени-дода-одузме да би рад био квалитетнији.
 Uvod bi trebalo da sadrži pregled obrađenih tema po poglavljima 
 radi lakšeg snalaženja čitaoca u radu.
-\\ \odgovor {Primedba prihvaćena. U uvod smo dodali reference na poglavlja u kojima je detaljnije opisane navedene teme.}
+\\ \odgovor {Primedba prihvaćena. U uvod smo dodali reference na poglavlja u kojima je detaljnije opisane navedene teme.} \\
 Poglavlje 2 bi se moglo unaprediti tako što bi se skratilo, 
 a dobijeni prostor u radu popuniti pričom o specifičnosti jezika,
 kao i navođenjem kratkog primera za asinhrono i/ili paralelno programiranje. 
