--- a/seminarski.bib
+++ b/seminarski.bib
@@ -59,6 +59,7 @@ author = {Microsoft},
 year = {2019}
 }
 
+
 @misc{unitsOfMeasure,
 title = {{Tour of F\#}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/fsharp/tour}},
@@ -70,6 +71,13 @@ year = {2019}
 title = {{Reactive programing}},
 note = {on-line at: \url{http://reactivex.io/}},
 author = {ReactiveX}
+}
+
+@misc{primena,
+title = {{primena funkcionalnih jezika slajd 23}},
+note = {on-line at: \url{http://www.programskijezici.matf.bg.ac.rs/ppR/2019/predavanja/fp/funkcionalno_programiranje_slajdovi.pdf}},
+author = {Milena Vujosevic Janicic},
+year = {2018}
 }
 
 
