--- a/Prezentacija/presentation.tex
+++ b/Prezentacija/presentation.tex
@@ -12,19 +12,11 @@
 \usepackage{multicol}
 
 
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=magenta,      
-    urlcolor=blue,
-}
-
 \mode<presentation>
 {
-  \usetheme{Warsaw}       % or try default, Darmstadt, Warsaw, ...
-  \usecolortheme{default} % or try albatross, beaver, crane, ...
-  \usefonttheme{serif}    % or try default, structurebold, ...
+  \usetheme{Warsaw}       
+  \usecolortheme{default} 
+  \usefonttheme{serif}    
   \setbeamertemplate{navigation symbols}{}
   \setbeamertemplate{caption}[numbered]
 } 
@@ -67,20 +59,15 @@
 \pgfpagesuselayout{resize to}[%
   physical paper width=8in, physical paper height=6in]
 
-
-% Here's where the presentation starts, with the info for the title slide
 \title{F\# na .NET platformi}
 \author{T.Todorov T.Garibović D.Nedeljković M.Vićentijević}
 \date{\today}
 
 \begin{document}
-
-
 \begin{frame}
   \titlepage
 \end{frame}
 
-% These three lines create an automatically generated table of contents.
 \begin{frame}{Pregled}
   \tableofcontents
 \end{frame}
@@ -125,8 +112,8 @@
 
 \end{frame}
 
-\section{Osobine. Funkcionalna, asinhrona i paralelna paradigma F\#}
-\subsection*{Osobine i specificnosti jezika}
+\section{Osobine i neke paradigme}
+\subsection*{Osobine i specifičnosti jezika}
 \begin{frame}{Osobine i specifičnosti}
 \begin{center}
 
@@ -155,7 +142,7 @@
 
 
 \begin{block}{Pattern matching}
-Pattern matching je mehanizam koji koristi dekompoziciju i kontrolu toka podataka za poklapanje obrazaca koriscenjem navedene konstrukcije:
+Pattern matching je mehanizam koji koristi dekompoziciju i kontrolu toka podataka za poklapanje obrazaca koriščenjem navedene konstrukcije:
 \textbf{ match ... with ...}
 \end{block}
 \begin{lstlisting}
